Fix dialog sidebar background under dialog handle
Fixes the dialog sidebar background colour not showing under dialog handle bottom left corner

--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -453,6 +453,8 @@
 		overflow-x: hidden;
 		overflow-y: auto;
 		border-bottom-left-radius: 6px;
+		margin-top: -10px;
+		padding-top: 10px;
 	}
 	.dialog_content {
 		display: block;
